# CMakeInstrset

./: .gitmodules  CMakeLists.txt  main.cpp  some.cpp  some.hpp
.github/workflows/: build.yml
ci/: ci_macOS.sh  ci_ubuntu.sh  ci_windows.ps1
test/: link.sh  run.sh
